[feat] 계좌번호 생성 테스트
Co-authored-by: Wonhee0221 <totohwh3601@naver.com>
Co-authored-by: LimEunSang <dmstkd2905@naver.com>

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     // aws secrets
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws-secrets-manager-config:2.2.6.RELEASE'
+
+    // test
+    testImplementation 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
