[feat] swagger 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,7 @@ springdoc:
         - "/register/**"
         - "/login/**"
         - "/logouts"
+        - "/users"
     - group: "account"
       display-name: "Account API"
       paths-to-match:
