[chore] 로그아웃 API URI 변경
- "/logouts" -> "/signout"

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,7 @@ springdoc:
       paths-to-match:
         - "/register/**"
         - "/login/**"
-        - "/logouts"
+        - "/signout"
         - "/users"
     - group: "account"
       display-name: "Account API"
