[chore] swagger User API 추가
- .yml 파일 User API 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,7 +64,7 @@ springdoc:
         - "/register/**"
         - "/login/**"
         - "/signout"
-        - "/users"
+        - "/users/**"
     - group: "account"
       display-name: "Account API"
       paths-to-match:
